# Book-Tracker-Server

./: .gitignore  .ocamlformat  Dockerfile  dune-project  flake.nix  schema.sql  server.opam
_build/: .db  .digest-db  log
_build/default/: server.dune-package
_build/default/lib/: book.ml  database.ml  lib.cma  lib.cmxa  lib.cmxs  lib.ml-gen  not_found.ml  root.eml.html  root.ml
_build/default/lib/.lib.objs/: lib__Book.impl.all-deps  lib__Book.impl.d  lib__Database.impl.all-deps  lib__Database.impl.d  lib__Not_found.impl.d  lib__Root.impl.d
_build/default/lib/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib__Book.cmi  lib__Book.cmo  lib__Book.cmt  lib__Database.cmi  lib__Database.cmo  lib__Database.cmt  lib__Not_found.cmi  lib__Not_found.cmo  lib__Not_found.cmt  lib__Root.cmi  lib__Root.cmo  lib__Root.cmt
_build/default/lib/.lib.objs/native/: lib.cmx  lib__Book.cmx  lib__Database.cmx  lib__Not_found.cmx  lib__Root.cmx
_build/default/lib/.merlin-conf/: lib-lib
_build/default/test/.merlin-conf/: exe-test_http
_build/default/test/.test_http.eobjs/byte/: dune__exe__Test_http.cmi  dune__exe__Test_http.cmti
_build/default/test/.test_http.eobjs/native/: dune__exe__Test_http.cmx
lib/: app.ml  book.ml  database.ml  dune  lib_parse.ml  lib_types.ml  not_found.eml.html
test/: data.ml  dune  tests.ml
