(library
  (name lib)
  (libraries 
    dream 

    caqti 
    caqti-lwt 
    caqti-driver-postgresql 

    lwt
    lwt.unix

    yojson
  )
  (preprocess (pps lwt_ppx))
)

(env
  (dev
    (flags (:standard -warn-error -a))
  )
)

(rule
 (targets root.ml)
 (deps root.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets not_found.ml)
 (deps not_found.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
